--- a/Tests/Tests.vcxproj
+++ b/Tests/Tests.vcxproj
@@ -13,6 +13,14 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <ItemGroup Label="ProjectConfigurations">
+    <ProjectConfiguration Include="Debug|ARM">
+      <Configuration>Debug</Configuration>
+      <Platform>ARM</Platform>
+    </ProjectConfiguration>
+    <ProjectConfiguration Include="Release|ARM">
+      <Configuration>Release</Configuration>
+      <Platform>ARM</Platform>
+    </ProjectConfiguration>
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
       <Platform>Win32</Platform>
@@ -129,9 +137,15 @@
     <ClCompile Include="Outline.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <CopyFileToFolders Include="Data\*.opml">
-      <DestinationFolders>$(OutDir)Data</DestinationFolders>
-    </CopyFileToFolders>
+    <None Include="Data\category.opml" />
+    <None Include="Data\directory.opml" />
+    <None Include="Data\fullheader.opml" />
+    <None Include="Data\playlist.opml" />
+    <None Include="Data\presentation.opml" />
+    <None Include="Data\simpleScript.opml" />
+    <None Include="Data\specification.opml" />
+    <None Include="Data\states.opml" />
+    <None Include="Data\subscriptionList.opml" />
     <None Include="Packages.config" />
     <None Include="PropertySheet.props" />
   </ItemGroup>
@@ -145,5 +159,11 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Microsoft.Windows.CppWinRT.2.0.200316.3\build\native\Microsoft.Windows.CppWinRT.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Windows.CppWinRT.2.0.200316.3\build\native\Microsoft.Windows.CppWinRT.props'))" />
     <Error Condition="!Exists('..\packages\Microsoft.Windows.CppWinRT.2.0.200316.3\build\native\Microsoft.Windows.CppWinRT.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Windows.CppWinRT.2.0.200316.3\build\native\Microsoft.Windows.CppWinRT.targets'))" />
+  </Target>
+  <Target Name="AfterBuild">
+    <ItemGroup>
+      <OpmlFiles Include="Data\*.opml" />
+    </ItemGroup>
+    <Copy SkipUnchangedFiles="True" SourceFiles="@(OpmlFiles)" DestinationFolder="$(OutDir)Data" />
   </Target>
 </Project>
